# NT208-ai-travel-itinerary-recommendation-system

./: .gitignore  AGENTS.md  BE.md  CLAUDE.md  FE.md  PR_DESCRIPTIONS.md  README.md  docker-compose.yml  implementation_plan.md  index.html  render.yaml
Backend/: .dockerignore  .env.example  BE_docs.md  Dockerfile  README.md  alembic.ini  config.yaml  main.py  pyproject.toml  requirements.txt  seed_data.py  test_api.py  test_full_api.py
Backend/alembic/: env.py
Backend/alembic/versions/: 20260428_0001_initial_mvp2_schema.py
Backend/app/: __init__.py  config.py  database.py
Backend/app/models/: __init__.py  place.py  trip.py  trip_place.py  user.py
Backend/app/routers/: __init__.py  auth.py  places.py  trips.py  users.py
Backend/app/schemas/: __init__.py  auth.py  place.py  trip.py  user.py
Backend/app/services/: __init__.py  auth_service.py  itinerary_service.py  user_service.py
Backend/app/utils/: __init__.py  dependencies.py  security.py
Backend/src/: __init__.py  main.py
Backend/src/api/v1/: auth.py  (+6 more)
Backend/src/base/: repository.py  schema.py
Backend/src/core/: config.py  database.py  dependencies.py  exceptions.py  logger.py  middlewares.py  rate_limiter.py  security.py
Backend/src/models/: __init__.py  extras.py  place.py  trip.py  user.py
Backend/src/repositories/: base.py  place_repo.py  token_repo.py  trip_repo.py  user_repo.py
Backend/src/schemas/: auth.py  common.py  itinerary.py  place.py  user.py
Backend/src/services/: auth_service.py  base.py  itinerary_service.py  place_service.py  user_service.py
Backend/tests/: conftest.py
(+160 files in other folders)
